--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,9 @@
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "eslint": "^9.28.0",
+    "globals": "^16.2.0"
   }
 }
