--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,9 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "eslint": "^9.28.0",
     "globals": "^16.2.0"
   }
