--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "seed": "node server/seeders/seedData.js"
+    "seed": "ts-node seeders/seedData.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,17 +20,19 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7",
-    "ts-node": "^10.9.2"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^24.0.3",
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.4.0"
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
